fetch & rest operator

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         display: flex;
     }
 </style>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+<script style="display: none;" src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
 <body>
-    <header>
-        Presionas "Control shift p" al tiempo y aparece un menu arriba
+    <!-- <header>
+        Menu arriba
     </header>
     <main>
         <section>
@@ -29,9 +29,11 @@
     </aside>
     <footer>
         HOLA SOY UN FOOTER
-    </footer>
+    </footer> -->
+
+    <script type="text/javascript" src="./prueba.js"></script>
     <script>
-        $(document).ready(() => {
+        /* $(document).ready(() => {
             console.log($('body').children());
             $('body').children().hide();
             let body = $('body').children();
@@ -42,7 +44,7 @@
                     element.delay(i * 500).fadeIn(2000);
             }
 
-        });
+        }); */
     </script>
 </body>
 
